--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <!-- Follow -->
     <section class="social">
-      <p>Follow TechNews</p>
+      <p>Follow us</p>
       <div class="links">
         <a href="https://facebook.com">
           <i class="fab fa-facebook-f"></i>
