Configuracion de los enlaces del navegador de la pagina

--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
       <!-- Left Nav -->
       <ul class="nav-menu">
         <li>
-          <a href="#">Inteligencia artificial</a>
+          <a href="#news-cards">Inteligencia artificial</a>
         </li>
         <li>
-          <a href="#">Realidad virtual</a>
+          <a href="#news-cards">Realidad virtual</a>
         </li>
         <li>
-          <a href="#">Ciberseguridad</a>
+          <a href="#news-cards">Ciberseguridad</a>
         </li>
         <li>
-          <a href="#">Tecnología móvil</a>
+          <a href="#news-cards">Tecnología móvil</a>
         </li>
         <li>
-          <a href="#">Computación cuántica</a>
+          <a href="#Content1">Computación cuántica</a>
         </li>
         <li>
-          <a href="#">Blockchain y criptomonedas</a>
+          <a href="#blockchain">Blockchain y criptomonedas</a>
         </li>
         
         <li>
-          <a href="#">Más</a>
+          <a href="#cards-banner-two">Más</a>
         </li>
       </ul>
 
@@ -72,8 +72,8 @@
     </header>
 
     <!-- NEWS CARDS -->
-    <div class="news-cards">
-      <div>
+    <div class="news-cards" id="news-cards">
+      <div class="IA-card">
         <img src="img/IA.jpg" alt="" />
         <h3>Inteligencia artificial y aprendizaje automático</h3>
         <p>La inteligencia artificial es una de las tecnologías más innovadoras del momento. Se trata de un conjunto de algoritmos y técnicas que permiten a las máquinas procesar y aprender información de manera autónoma, y tomar decisiones basadas en esta información. Desde la creación de chatbots hasta la automatización de procesos empresariales, la inteligencia artificial está transformando la forma en que interactuamos con la tecnología y el mundo en general.
@@ -108,7 +108,7 @@
 
     <!-- Card Banner 1-->
     <section class="cards-banner-one">
-      <div class="content">
+      <div class="content" id="Content1">
         <h2>Computación cuántica y sus implicaciones</h2>
         <!-- lorem 20 -->
         <p>
@@ -119,9 +119,9 @@
     </section>
 
     <!-- NEWS CARDS -->
-    <div class="news-cards">
+    <div class="news-cards" >
       <div>
-        <img src="img/Blockchain.jpg" alt="" />
+        <img src="img/Blockchain.jpg" alt="" id="blockchain"/>
         <h3>Tecnología blockchain y criptomonedas</h3>
         <p>
             La tecnología blockchain y las criptomonedas son innovaciones disruptivas en el mundo financiero y tecnológico. La tecnología blockchain es una forma de almacenar y transmitir información de manera segura y descentralizada, mientras que las criptomonedas son monedas digitales que utilizan esta tecnología para realizar transacciones seguras y privadas. La tecnología blockchain y las criptomonedas tienen el potencial de revolucionar la forma en que hacemos negocios y gestionamos nuestras finanzas.
@@ -155,7 +155,7 @@
     </div>
 
     <!-- third card -->
-    <section class="cards-banner-two">
+    <section class="cards-banner-two" id="cards-banner-two">
       <div class="content">
         <h2>Tecnología de vehículos autónomos y drones</h2>
         <!-- lorem 30 -->
